# sg-website

./: CNAME  Cargo.toml
.github/workflows/: static.yml
frontend/: admin.html  dashboard.html  home.html  how_to_use.html  index.html  login_form.html  pay.html  receive.html  redeem.html  register.html  terms_of_use.html  transaction_history.html
frontend/component/: Account.js  Selector.js
src/: lib.rs  sms.rs
