[package]
name = "portal"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
webhook-flows = "0.4"
store-flows = "0.3"
flowsnet-platform-sdk = "0.1"
tokio_wasi = { version = "1.25.1", features = ["macros", "rt"] }
mysql_async_wasi = { version = "0.33", features = [ "default-rustls" ] }
twilio_wasi = "1.0.3"
sendgrid-wasi = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
anyhow = "1"
uuid = { version = "1.5", features = ["v4"] }
ethers-signers = "2.0.10"
ethers-core = "2.0.10"
reqwest_wasi = { version = "0.11", features = ["wasmedge-tls"] }
rlp = "0.5.2"
tencentcloud-sdk-sms-wasi = "0.2"
time = { version = "0.3.31", features = ["serde"] }
csv = "1.3"
zstd-sys = "=2.0.9"
